Fixing icons vertical alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -259,6 +259,7 @@ a {
 }
 
 .button {
+  vertical-align: middle;
   width: 1em;
   height: 1em;
 }
